--- a/Exercises/tsconfig.json
+++ b/Exercises/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
     "target": "ES3",
-    "strict": false,
+    "strict": true,
     "module": "CommonJS",
     "moduleResolution": "Node",
     "esModuleInterop": false,
