--- a/Exercises/tsconfig.json
+++ b/Exercises/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
     "outDir": "dist",
     "rootDir": "src"
   }
